# compiler-hardening-tests

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  analyze_inconsistencies.py  inconsistency_report.md  main.cpp
.github/workflows/: ci.yml  deploy-diagnostic-flags.yml
test/: README.md  test_observe_assertions.cpp
tools/diagnostic-flags/: README.md  index.html  parse_diagnostics.py
tools/inconsistency-analysis/: README.md  analyze_inconsistencies.py  inconsistency_report.md
